2009-07-21  Eric Blake  <ebb9@byu.net>

	* dtable.cc (dup2): Correct return value for no-op.

2009-07-21  Corinna Vinschen  <corinna@vinschen.de>
	    Eric Blake  <ebb9@byu.net>

	* fhandler_disk_file.cc (fhandler_disk_file::fchmod): Add special case
	for MVFS.  Explain why.
	(fhandler_disk_file::utimens): Drop local variables lastaccess and
	lastwrite.  Copy timestamps right into FILE_BASIC_INFORMATION structure
	to avoid copying them twice.  

2009-07-20  Corinna Vinschen  <corinna@vinschen.de>

	* wincap.h (wincaps::has_always_all_codepages): New element.
	* wincap.cc: Implement above element throughout.
	* wchar.h (__sjis_mbtowc): Declare.
	(__eucjp_mbtowc): Ditto.
	(__gbk_mbtowc): Ditto.
	(__kr_mbtowc): Ditto.
	(__big5_mbtowc): Ditto.
	* syscalls.cc (internal_setlocale): Convert to char * function.
	Return parameter by default.  Return NULL if request to use a
	charset can't be satisfied due to missing codepage support in the
	underlying OS.  Fix comment.
	(setlocale): Store original locale.  Restore to original locale if
	internal_setlocale returns NULL.

2009-07-20  Corinna Vinschen  <corinna@vinschen.de>

	* fork.cc (fork): Create local tmp_pathbuf.  Explain why.

2009-07-18  Christopher Faylor  <me+cygwin@cgf.cx>

	* exceptions.cc (sig_handle_tty_stop): Set stopsig to SIGCONT when
	continuing.
	(stopped_or_terminated): Honor WCONTINUED.
	* wait.cc (wait4): Ditto.
	* include/cygwin/wait.h (WCONTINUED): Define.
	(__W_CONTINUED): Ditto.
	(WIFCONTINUED): Ditto.

2009-07-18  Dave Korn  <dave.korn.cygwin@gmail.com>

	* libstdcxx_wrapper.cc (operator delete): Remove stray space in
	asm name.

2009-07-17  Christopher Faylor  <me+cygwin@cgf.cx>

	* cygtls.cc (_cygtls::init_exception_handler): Test for e, not e->prev
	or we could still end up adding our handler twice.  Add comment
	explaining what we're doing.
	* dll_init.cc (dll_dllcrt0_1): Clarify comment.

2009-07-17  Christopher Faylor  <me+cygwin@cgf.cx>
