@@ -1,3 +1,15 @@
+2009-07-21  Corinna Vinschen  <corinna@vinschen.de>
+
+	* fhandler.h (enum del_lock_called_from): New enumeration.
+	(fhandler_base::del_my_locks): Declare taking a del_lock_called_from
+	as argument.
+	* fhandler.cc (fhandler_base::close): Call del_my_locks with "on_close".
+	(fhandler_base::fixup_after_fork): Call del_my_locks with "after_fork".
+	(fhandler_base::fixup_after_exec): Call del_my_locks with "after_exec".
+	* flock.cc (fhandler_base::del_my_locks): Take del_lock_called_from
+	as argument.  Call node->del_my_locks with NULL handle in after_exec
+	case.  Explain why.
+
 2009-07-21  Eric Blake  <ebb9@byu.net>
 
 	* dtable.cc (dup2): Correct return value for no-op.
